--- a/UI-MVC/Views/Playlist/View.cshtml
+++ b/UI-MVC/Views/Playlist/View.cshtml
@@ -100,10 +100,10 @@
     <i class="material-icons">playlist_add</i> add track
 </a>
 
-<div id="addTrackModal" class="modal" style="margin-top: -90px">
-    <div class="modal-content" style="width: 620px; height: 530px">
+<div id="addTrackModal" class="modal" style="margin-top: -140px">
+    <div class="modal-content" style="width: 30%; height: 70%">
         <a href="#close" title="Close" class="close">X</a>
-        <div class="modal-body" style="margin-left: 60px; width: 100%">
+        <div class="modal-body" style="height: 100%; width: 100%">
             @{
                 Html.RenderPartial("AddTrack");
             }
