--- a/UI-MVC/Content/Site.scss
+++ b/UI-MVC/Content/Site.scss
@@ -313,7 +313,7 @@ header {
     color: #808080;
     font: 13px Helvetica, Arial, sans-serif;
     margin: 0 0 10px;
-    padding: 10px 10px 10px 40px;
+    padding: 10px;
     width: 270px;
     height: 40px;
     vertical-align: middle;
