--- a/UI-MVC/Views/Playlist/View.cshtml
+++ b/UI-MVC/Views/Playlist/View.cshtml
@@ -110,6 +110,8 @@
         </div>
     </div>
 </div>
+<input type="button" id="playBtn" class="btn" value="Start Playing"/>
+<input type="button" id="nextBtn" class="btn" click="playNextTrack" value="Next track" />
 
 <div id="player">
     <h1>Now playing ▶</h1>
@@ -117,7 +119,6 @@
 
 @section Scripts{
     <script>
-        
         var markup = '<li class="track" data-id="${TrackSource.TrackId}">' +
             '<img class="thumbnail" src="${CoverArtUrl}"/>' +
             '<span class="artist">${Artist}</span>' +
@@ -184,5 +185,54 @@
         $("#query").on('keydown', function () {
             debouncedFetch();
         });
+
+        var tag = document.createElement('script');
+        tag.src = "https://www.youtube.com/iframe_api";
+        var firstScriptTag = document.getElementsByTagName('script')[0];
+        firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+        
+        var player;
+        function onYouTubeIframeAPIReady() {
+            player = new YT.Player('player', {
+                height: '390',
+                width: '640',
+                videoId: '@Model.PlaylistTracks.First().Track.TrackSource.TrackId.ToString()',
+                events: {
+                    'onReady': onPlayerReady,
+                    'onStateChange': onPlayerStateChange
+                }
+            });  
+        }
+
+        var playing = false;
+        function onPlayerReady(event) {
+            var playButton = document.getElementById("playBtn");
+            playButton.addEventListener("click", function() {
+                if (!playing) {
+                    playing = true;
+                    playButton.value = 'Pause';
+                    player.playVideo();    
+                } else {
+                    playing = false;
+                    playButton.value = 'Start Playing';
+                    player.pauseVideo();    
+                }
+            });
+        }
+
+        function playNextTrack() {
+            alert("hello");
+        }
+        var done = false;
+        function onPlayerStateChange(event) {
+            if (event.data == YT.PlayerState.PLAYING && !done) {
+                setTimeout(stopVideo, 6000);
+                done = true;
+            }
+        }
+        function stopVideo() {
+            player.stopVideo();
+        }
+
     </script>
 }
