--- a/UI-MVC/Views/Organisations/Details.cshtml
+++ b/UI-MVC/Views/Organisations/Details.cshtml
@@ -47,6 +47,10 @@
 
     </dl>
 </div>
+<div>
+    <input type="button" value="Add a co-organiser" />
+    @Html.TextBox("EmailCo");
+</div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
     @Html.ActionLink("Back to List", "Index")
