--- a/UI-MVC/Content/Site.css
+++ b/UI-MVC/Content/Site.css
@@ -11,6 +11,10 @@
   line-height: .3em;
   margin-left: -.1em; }
 
+a.disabled {
+  pointer-events: none;
+  cursor: default; }
+
 header {
   display: block;
   padding: 1em 5em;
@@ -252,6 +256,19 @@ header {
   border: 1px solid #000;
   outline: none; }
 
+.progress {
+  position: relative;
+  width: 100%;
+  height: 5px;
+  background-color: lightgray; }
+
+.bar {
+  position: absolute;
+  width: 0.1%;
+  height: 100%;
+  background-color: black;
+  border: solid 1px; }
+
 .form-label {
   width: 90%;
   vertical-align: middle;
@@ -316,6 +333,9 @@ header {
   border-radius: 4px; }
   .btn:hover {
     background: #222; }
+
+.btn:disabled {
+  cursor: not-allowed; }
 
 .btn-default {
   color: white; }
