--- a/UI-MVC/Content/Site.scss
+++ b/UI-MVC/Content/Site.scss
@@ -321,6 +321,18 @@ header {
     height: 40px;
     vertical-align: middle;
 }
+
+.custom-dropdown{
+    height: 1.6em;
+    background: none;
+    border: none;
+    border-bottom: 1px solid black;
+    position: relative;
+    top: -.15em;
+    font-family: Roboto;
+    font-size: .65em;
+}
+
 .custom-input-organisations, .custom-input-playlists{
     @extend .custom-input;
     width:350px;
